--- a/gallery.html
+++ b/gallery.html
@@ -239,7 +239,7 @@
                 </a>
               </li>
               <li class="gallery-year-item">
-                <a href="./2022.12.4魂魄妖夢(東方Project).jpg" data-lightbox="2022" title="<p class='gallery-year-desc'>2022.12.4/p>">
+                <a href="./2022.12.4魂魄妖夢(東方Project).jpg" data-lightbox="2022" title="<p class='gallery-year-desc'>2022.12.4</p>">
                   <img src="./2022.12.4魂魄妖夢(東方Project).jpg" alt="魂魄妖夢" class="gallery-year-img" title="">
                 </a>
               </li>
