--- a/gallery.html
+++ b/gallery.html
@@ -29,7 +29,9 @@
     <header class="header">
       <div class="header-inner">
         <!-- ロゴ -->
-        <h1 class="header-logo">鹿の胴体</h1>
+        <h1 class="header-logo">
+          <img src="./鹿の胴体_ロゴ_透過.png" alt="ロゴ" width="200px" height="90px">
+        </h1>
         <!-- ナビゲーションタブ -->
         <nav class="header-nav">
           <ul class="header-nav-list">
@@ -783,21 +785,23 @@
     </section>
     <!-- フッター -->
     <footer class="footer">
-      <div class="footer-logo">鹿の胴体</div>
-      <nav class="footer-nav">
-        <ul class="footer-nav-list">
-          <li class="footer-nav-item">
-            <a href="https://x.com/Lio_Nekomiya?s=20" target="_blank" class="footer-nav-link x">
-              <img src="./x_logo.png" alt="x link" width="20px" height="20px" class="footer-nav-icon">
-            </a>
-          </li>
-          <li class="footer-nav-item">
-            <a href="https://www.pixiv.net/users/46735621" target="_blank" class="footer-nav-link">
-              <img src="./pixiv_logo.png" alt="pixiv link" width="20px" height="20px" class="footer-nav-icon">
-            </a>
-          </li>
-        </ul>
-      </nav>
+      <div class="footer-wrapper">
+        <div class="footer-logo">鹿の胴体</div>
+        <nav class="footer-nav">
+          <ul class="footer-nav-list">
+            <li class="footer-nav-item">
+              <a href="https://x.com/Lio_Nekomiya?s=20" target="_blank" class="footer-nav-link x">
+                <img src="./x_logo.png" alt="x link" width="20px" height="20px" class="footer-nav-icon">
+              </a>
+            </li>
+            <li class="footer-nav-item">
+              <a href="https://www.pixiv.net/users/46735621" target="_blank" class="footer-nav-link">
+                <img src="./pixiv_logo.png" alt="pixiv link" width="20px" height="20px" class="footer-nav-icon">
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
       <div class="footer-copy-wrapper">
         <small class="copyright">&copy;Shinato Nagi</small>
       </div>
