--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="header-inner">
         <!-- ロゴ -->
         <h1 class="header-logo">
-          <img src="./img/鹿の胴体_ロゴ_透過.png" alt="ロゴ" width="200px" height="90px">
+          <img src="./鹿の胴体_ロゴ_透過.png" alt="ロゴ" width="200px" height="90px">
         </h1>
         <!-- ナビゲーションタブ -->
         <nav class="header-nav">
