--- a/index.html
+++ b/index.html
@@ -199,37 +199,6 @@
     <!--カルーセル-->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script>
-      const mediaQuery = window.matchMedia('(max-width: 767px)');
-      handle(mediaQuery);
-      mediaQuery.addListener(handle);
-      function handle(mm) {
-        if(mm.matches) {
-          $(function(){
-            $('.slider').slick({
-              autoplay: true,
-              autoplaySpeed: 4000,
-              dots: true,
-              draggable: false,
-              swipe: false,
-              slidesToShow: 1,
-              slidesToScroll: 1,
-            });
-          });
-        } else {
-          $(function(){
-            $('.slider').slick({
-              autoplay: true,
-              autoplaySpeed: 5000,
-              dots: true,
-              draggable: false,
-              swipe: false,
-              slidesToShow: 3,
-              slidesToScroll: 1,
-            });
-          });
-        }
-      }
-    </script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
