--- a/gallery.html
+++ b/gallery.html
@@ -66,6 +66,7 @@
                 <img src="./shika_icon.png" alt="shika icon" width="20px" height="20px">
               </span>
               <span class="gallery-year-heading-text">2023年</span>
+              <span class="gallery-year-heading-menu"></span>
             </h3>
             <ul class="gallery-year-list">
               <li class="gallery-year-item">
@@ -226,6 +227,7 @@
                 <img src="./shika_icon.png" alt="shika icon" width="20px" height="20px">
               </span>
               <span class="gallery-year-heading-text">2022年</span>
+              <span class="gallery-year-heading-menu"></span>
             </h3>
             <ul class="gallery-year-list">
               <li class="gallery-year-item">
@@ -536,6 +538,7 @@
                 <img src="./shika_icon.png" alt="shika icon" width="20px" height="20px">
               </span>
               <span class="gallery-year-heading-text">2021年</span>
+              <span class="gallery-year-heading-menu"></span>
             </h3>
             <ul class="gallery-year-list">
               <li class="gallery-year-item">
@@ -756,6 +759,7 @@
                 <img src="./shika_icon.png" alt="shika icon" width="20px" height="20px">
               </span>
               <span class="gallery-year-heading-text">2020年</span>
+              <span class="gallery-year-heading-menu"></span>
             </h3>
             <ul class="gallery-year-list 2020">
               <li class="gallery-year-item">
