--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <nav class="header-nav">
           <ul class="header-nav-list">
             <li class="header-nav-item">
-              <a href="#" class="header-nav-link">Home</a>
+              <a href="#" class="header-nav-link current">Home</a>
             </li>
             <li class="header-nav-item">
               <a href="./profile.html" class="header-nav-link">Profile</a>
