--- a/profile.html
+++ b/profile.html
@@ -38,7 +38,7 @@
               <a href="./index.html" class="header-nav-link">Home</a>
             </li>
             <li class="header-nav-item">
-              <a href="#" class="header-nav-link">Profile</a>
+              <a href="#" class="header-nav-link current">Profile</a>
             </li>
             <li class="header-nav-item">
               <a href="./gallery.html" class="header-nav-link">Gallery</a>
