--- a/gallery.html
+++ b/gallery.html
@@ -42,7 +42,7 @@
               <a href="profile.html" class="header-nav-link">Profile</a>
             </li>
             <li class="header-nav-item">
-              <a href="#" class="header-nav-link" id="now">Gallery</a>
+              <a href="#" class="header-nav-link current">Gallery</a>
             </li>
           </ul>
         </nav>
