--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <!-- ナビゲーションタブ -->
         <nav class="header-nav">
           <ul class="header-nav-list">
-            <li class="header-nav-item current">
-              <a href="#" class="header-nav-link">Home</a>
+            <li class="header-nav-item">
+              <a href="#" class="header-nav-link current">Home</a>
             </li>
             <li class="header-nav-item">
               <a href="./profile.html" class="header-nav-link">Profile</a>
