--- a/profile.html
+++ b/profile.html
@@ -87,15 +87,15 @@
             <ul class="profile-sns-list">
               <li class="profile-sns-item">
                 <a href="https://x.com/Lio_Nekomiya?s=20" target="_blank" class="profile-sns-link x">
-                  <img src="./x_logo.png" alt="x link" class="profile-sns-icon" width="24px" height="24px">
+                  <img src="./x_logo.png" alt="x link" class="profile-sns-icon" width="24px" height="24px
+                  <p class="profile-sns-text">: 日常やイラスト</p>
                 </a>
-                <p class="profile-sns-text">: 日常やイラスト</p>
               </li>
               <li class="profile-sns-item">
                 <a href="https://www.pixiv.net/users/46735621" target="_blank" class="profile-sns-link">
                   <img src="./pixiv_logo.png" alt="pixiv link" class="profile-sns-icon" width="24px" height="24px">
+                  <p class="profile-sns-text">: 過去の作品</p>
                 </a>
-                <p class="profile-sns-text">: 過去の作品</p>
               </li>
             </ul>
           </div>
