--- a/profile.html
+++ b/profile.html
@@ -63,7 +63,7 @@
             <!-- プロフ画像 -->
             <li class="profile-item">
               <div class="profile-img">
-                <img src="./2023.7.14うちのこ.jpg" alt="">
+                <img src="./2023.7.14うちのこ.jpg" alt="うちのこ">
               </div>
             </li>
             <!-- テキスト -->
